2.1.8
- rebuild due to some static libs in latest git

2.1.7
- update to vdr-plugin-streamdev-6a47e20
- update to vdr-sc-613

2.1.6
- update to vdr-plugin-dvbapi-e3200c8
- added vdr-xmltv2vdr plugin
- added xineliboutput plugin
- added text2skin plugin
- preparation for xine based VDR frontend as separate addon

2.1.5
- fixed rotorng
- added wirbelscancontrol plugin

2.1.4
- added live plugin
- added rotorng plugin
- added control plugin
- added epgsearch plugin
- update to vdr-iptv-0.5.2
- update to vdr-plugin-streamdev-8719007
- update to vdr-plugin-xvdr-b62ccbd

2.1.3
- adjust for fontconfig 2.9.0
- update patchset 
- suspend/resume fixes

2.1.2
- update to vdr-1.7.27
- update to vdr-dynamite-10d78a8
- update to vdr-sc-605

2.1.1
- rebuild for addon version 2.1
- update to vdr-plugin-dvbapi-9bef03f

2.0.9
- modules to remove on sleep now configurable via settings ui
- enabled plugins now configurable via settings ui

2.0.8
- update to vdr-1.7.25
- update to vdr-plugin-xvdr-c98852f
- add streamdev-client / server plugin
- update to vdr-iptv-0.5.0
- move w_scan in a own addon

2.0.7
- add possibilty to start / stop addon from addon manager with enable / disable

2.0.6
- enable unloading/loading dvb modules on suspend/resume

2.0.5
- update to vdr-1.7.24
- sc now works without the need to disable dynamite plugin

2.0.4
- start userspace DVB drivers before VDR

2.0.3
- update to vdr-plugin-xvdr-0ac808a
- rebuild for libiconv changes
- update to vdr-plugin-dvbapi-b0194c8
- update to w_scan-20120112

2.0.2
- update to vdr-plugin-xvdr-ec9b759
- update to vdr-plugin-dvbapi-dad660a
- update to vdr-dynamite-27d7bed
- add plugin 'vdr-iptv'

2.0.1
- rename vdr-dvbapi-plugin to vdr-plugin-dvbapi
- update to vdr-plugin-dvbapi-68e043a

2.0.0
- initial version vdr-1.7.22