@@ -30,4 +30,6 @@
 	<string id="1050">Enable plugin: text2skin</string>
 	<string id="1051">VDR Configuration</string>
 	<string id="1052">VDR Video Dir</string>
+	<string id="1053">Enable vdrnfofs</string>
+	<string id="1054">VDR-NfoFS Mountpoint</string>
 </strings>
