@@ -11,6 +11,8 @@
 		<setting label="1051" type="lsep"/>
 		<setting type="sep" />
                 <setting id="VDR_VIDEO_DIR" type="folder" label="1052" value="" default="/storage/videos" />
+		<setting id="ENABLE_VDRNFOFS" type="bool" label="1053" default="false" />
+		<setting id="MOUNTPOINT_VDRNFOFS" type="folder" label="1054" values="" enable="!eq(-1,false)"  default="/media/Recordings"/>
     </category>
     <category label="1001">
 		<setting label="1030" type="lsep"/>
